tests/ui/missing_field.stderr
error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:12:16
   |
12 |     let _foo = pin_init!(Foo { a: 0 });
   |                ^^^^^^^^^^^^^^^^^^^^^^^ missing `b`
   |
   = note: this error originates in the macro `$crate::try_pin_init` which comes from the expansion of the macro `pin_init` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:13:16
   |
13 |     let _foo = try_pin_init!(Foo { a: 0 });
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `b`
   |
   = note: this error originates in the macro `$crate::try_pin_init` which comes from the expansion of the macro `try_pin_init` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:14:16
   |
14 |     let _foo = init!(Foo { a: 0 });
   |                ^^^^^^^^^^^^^^^^^^^ missing `b`
   |
   = note: this error originates in the macro `$crate::try_init` which comes from the expansion of the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/missing_field.rs:15:16
   |
15 |     let _foo = try_init!(Foo { a: 0 });
   |                ^^^^^^^^^^^^^^^^^^^^^^^ missing `b`
   |
   = note: this error originates in the macro `$crate::try_init` which comes from the expansion of the macro `try_init` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0063`.
